--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rain or No Rain</title>
+    <link rel="stylesheet" href="/styles/index.css" />
   </head>
   <body>
     <h1>Guess the RAIN... or not!</h1>
